--- a/Kolokwium/style.css
+++ b/Kolokwium/style.css
@@ -1,3 +1,12 @@
-.table tr:nth-child(2n){
+h1{
+    color: blue;
+}
+
+#d{
+     border-style: solid;
+    border-color: blue;
+    border-radius: 15px;
+}
+table tr:nth-child(2n) td{
     background-color: beige;
 }
